--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,8 @@
 @tailwind utilities;
 
 *{
-  background-color: black;
-  color: white;
+  /* background-color: black;
+  color: white; */
   box-sizing: border-box;
   padding: 0px 0px 0px 0px;
   margin: 0px 0px 0px 0px;
